--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>Number: {{ n }}</H1>
-    </BODY>
-</HTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Number Template</title>
+</head>
+<body>
+    <H1>Number: {{n}}</H1>
+</body>
+</html>
